@@ -1,7 +1,7 @@
 Manifest-Version: 1.0
 Bundle-Name: Eclipse Wiki
 Bundle-SymbolicName: com.teaminabox.eclipse.wiki;singleton=true
-Bundle-Version: 2.4.2.3
+Bundle-Version: 2.4.2.4
 Bundle-ClassPath: wiki.jar,
  lib/java2html_4.1.jar,
  lib/commons-lang-2.1.jar
@@ -22,6 +22,7 @@ Require-Bundle: org.eclipse.ui,
  org.eclipse.jdt.core,
  org.eclipse.ui.forms,
  org.eclipse.ui.views,
- org.eclipse.jdt.ui
+ org.eclipse.jdt.ui,
+ org.eclipse.jdt.launching
 Eclipse-AutoStart: true
 Bundle-Vendor: Channing Walton
