@@ -28,6 +28,7 @@ public interface WikiConstants {
 	String[]	URL_PREFIXES												= new String[] { "http:", "https:", "ftp:", "sftp:", "mailto:", "file:", "news:", "gopher:", "telnet:", "afp:", "nfs:", "smb:" };
 	String		ECLIPSE_PREFIX												= "Eclipse:";
 	String		PLUGIN_PREFIX												= "Plugin:";
+	String		JAVA_LINK_PREFIX											= "Java:";
 	char		LINE_NUMBER_SEPARATOR										= ':';
 
 	String		HOVER_PREVIEW_LENGTH										= "hoverPreviewLength";
@@ -97,5 +98,6 @@ public interface WikiConstants {
 	boolean		DEFAULT_RENDER_FULLY_QUALIFIED_TYPE_NAMES					= true;
 
 	String		WIKI_HREF													= "http://--wiki/";
+	String		HELP_PATH													= "/help";
 
 }
