@@ -271,7 +271,7 @@ a line with <b>bold</b> and <i>italic</i> and <strike>strike</strike></p>
 <p>
 </p>
 <p>
-Text with Java types <a href="http://--wiki/Eclipse:/TEST_PROJECT_NAME/com/teaminabox/foo/BigClass.java">com.teaminabox.foo.BigClass</a> and an inner class <a href="http://--wiki/Eclipse:/TEST_PROJECT_NAME/com/teaminabox/foo/BigClass.java">com.teaminabox.foo.BigClass.InnerClass</a></p>
+Text with Java types <a href="http://--wiki/Java:com.teaminabox.foo.BigClass">com.teaminabox.foo.BigClass</a> and an inner class <a href="http://--wiki/Java:com.teaminabox.foo.BigClass$InnerClass">com.teaminabox.foo.BigClass.InnerClass</a></p>
 <p>
 </p>
 <p>
