@@ -118,15 +118,15 @@ a line with <a href="http://--wiki/WardsBrowserContentRendererTest">WardsBrowser
 <tr><td>very</td><td>cool</td><td>indeed</td></tr>
 <tr><td><a href="http://--wiki/WardsBrowserContentRendererTest">WardsBrowserContentRendererTest</a></td><td>SnipSnapContentRendererTest<a href="http://--wiki/SnipSnapContentRendererTest">?</a></td><td>TwikiContentRendererTest<a href="http://--wiki/TwikiContentRendererTest">?</a></td></tr>
 <tr><td><a href="http://www.acronymfinder.com/af-query.asp?Acronym=WTF">Acronym:WTF</a> </td><td><a href="http://www.google.com">http://www.google.com</a> </td><td><a href="http://eclipsewiki.free.fr/index.php?page=license.html">EclipseWiki:license.html</a> </td></tr>
-<tr><td>and</td><td>images </td><td><img alt="" src="http://www.google.com/images/logo.gif"/> </td></tr>
+<tr><td>and</td><td>images </td><td><img alt="http://www.google.com/images/logo.gif" src="http://www.google.com/images/logo.gif"/> </td></tr>
 </table>
 <p><strong>Images</strong></p>
 <p>
-<img alt="" src="http://www.google.com/images/logo.gif"/></p>
+<img alt="http://www.google.com/images/logo.gif" src="http://www.google.com/images/logo.gif"/></p>
 <p>
 </p>
 <p>
-Text with Java types <a href="http://--wiki/Eclipse:/TEST_PROJECT_NAME/com/teaminabox/foo/BigClass.java">com.teaminabox.foo.BigClass</a> and an inner class <a href="http://--wiki/Eclipse:/TEST_PROJECT_NAME/com/teaminabox/foo/BigClass.java">com.teaminabox.foo.BigClass.InnerClass</a></p>
+Text with Java types <a href="http://--wiki/Java:com.teaminabox.foo.BigClass">com.teaminabox.foo.BigClass</a> and an inner class <a href="http://--wiki/Java:com.teaminabox.foo.BigClass$InnerClass">com.teaminabox.foo.BigClass.InnerClass</a></p>
 <p>
 </p>
 <p>
