@@ -1,0 +1,36 @@
+package com.teaminabox.eclipse.wiki.renderer;
+
+import com.teaminabox.eclipse.wiki.text.EclipseResourceTextRegion;
+import com.teaminabox.eclipse.wiki.text.JavaTypeTextRegion;
+import com.teaminabox.eclipse.wiki.text.PluginResourceTextRegion;
+import com.teaminabox.eclipse.wiki.text.WikiLinkTextRegion;
+import com.teaminabox.eclipse.wiki.text.WikiUrlTextRegion;
+
+public class TestLinkMaker extends LinkMaker {
+
+	public String make(WikiLinkTextRegion wikiNameTextRegion) {
+		// TODO Auto-generated method stub
+		return null;
+	}
+
+	public String make(WikiUrlTextRegion wikiUrlTextRegion) {
+		// TODO Auto-generated method stub
+		return null;
+	}
+
+	public String make(EclipseResourceTextRegion eclipseResourceTextRegion) {
+		// TODO Auto-generated method stub
+		return null;
+	}
+
+	public String make(PluginResourceTextRegion pluginResourceTextRegion) {
+		// TODO Auto-generated method stub
+		return null;
+	}
+
+	public String make(JavaTypeTextRegion region) {
+		// TODO Auto-generated method stub
+		return null;
+	}
+
+}
